# ScreenHunter

./: CMakeLists.txt  compile_deps.sh
resources/: genrc.cpp
src/app/: main.cpp
src/app/editor/: EditorWindow.cpp  EditorWindow.h
src/app/editor/ctrl/: ColorButton.cpp  ColorButton.h  ColorPicker.cpp  ColorPicker.h  Container.cpp  Container.h  Control.cpp  Control.h  SizePicker.cpp  SizePicker.h  TextBox.cpp  TextBox.h  ToolButton.cpp  ToolButton.h  ToolPicker.cpp  ToolPicker.h
src/app/editor/ctrl/icon/: Icon.cpp  Icon.h
src/app/editor/paint/: ClippingPainter.cpp  ClippingPainter.h  CurvePainter.cpp  CurvePainter.h  EllipsePainter.cpp  EllipsePainter.h  IDragHandler.h  IElementPainter.h  IInputTextHandler.h  IPaintStep.h  LinePainter.cpp  LinePainter.h  PaintHistory.cpp  PaintHistory.h  PaintStep.h  PaintStyle.cpp  PaintStyle.h  RectPainter.cpp  RectPainter.h  TextPainter.cpp  TextPainter.h  TwoPointPainter.cpp  TwoPointPainter.h
src/app/editor/state/: EditorClippingIdleState.cpp  EditorClippingIdleState.h  EditorStateHandler.h
src/app/event/: KeyboardEvent.h  MouseButtonEvent.h  MouseMoveEvent.h  TextInputEvent.h  WindowEvent.h
src/app/screen/: DisplayInfo.cpp  DisplayInfo.h
src/app/screen/mac/: DisplayInfoImpl.cpp  DisplayInfoImpl.h
src/app/screen/win32/: DisplayInfoImpl.cpp  DisplayInfoImpl.h
src/app/screen/x11/: DisplayInfoImpl.cpp  DisplayInfoImpl.h
src/app/window/: App.cpp  App.h  AppWindow.cpp  AppWindow.h  AppWindowImpl.cpp  AppWindowImpl.h  AppWindowManager.cpp  AppWindowManager.h  Painter.cpp  Painter.h
src/app/window/ctrl/: ColorButton.cpp  ColorButton.h  ColorButtonGroup.cpp  ColorButtonGroup.h  Container.cpp  Container.h  Control.cpp  Control.h
src/test/: screenshot_linux.cpp  screenshot_mac.cpp  screenshot_windows.cpp
